fixed missing background image for space game link on homepage

--- a/public/app/routes/home/home.sass
+++ b/public/app/routes/home/home.sass
@@ -60,7 +60,7 @@ $bg-gradient: linear-gradient(rgb(0,0,0) 0%, rgba(0,0,0,0.3) 50%, rgb(0,0,0) 100
     z-index: -5
 
   #space-div
-
+    background: url('./app/routes/home/img/space-game-2.png')
     .headline
       color: orange
       text-shadow: -5px 5px #610e0e
